[project]
name = "summer-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "ollama>=0.6.2",
    "openai>=2.45.0",
    "pdfplumber>=0.11.10",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
]
